--- a/style.css
+++ b/style.css
@@ -2,8 +2,9 @@ body{
     margin: 0;
     background-color: blanchedalmond;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    
 }
-
+i{font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;}
 a{
     text-decoration: none;
 }
@@ -44,3 +45,47 @@ main h1 {
     margin-top: 30px;
     margin-bottom: 30px;
 }
+
+.catalog {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+  }
+  
+  .card {
+    height: 520px;
+    width: 350px;
+    text-align: center;
+    padding: 20px;
+    background-color: #f6f6f6;
+    border-radius: 15px;
+    font-size: 20px;
+    margin: 20px;
+    box-shadow: inset 0px 0px 5px 0px lightgray;
+    cursor: pointer;
+  }
+  
+  .card img {
+    height: 400px;
+    width: 300px;
+  }
+  
+  .price{
+    color: red;
+    text-shadow: 0px 0px 20px orange;
+  }
+  .fa-basket-shopping{
+    color: blue;
+    font-size: 25px;
+  }
+
+  footer{
+    background-color:burlywood;
+    padding: 15px;
+    font-size: 20px;
+    display: flex;
+  }
+  
+  .links{
+    margin-left: 300px;
+  }
