--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ main h1 {
   width: 350px;
   text-align: center;
   padding: 20px;
-  background-color: #f6f6f6;
+  background-color: white;
   border-radius: 15px;
   font-size: 20px;
   margin: 20px;
